# Splash

./: .gitignore  .gitmodules  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build_and_run.sh  hosts.txt.example
src/: hw_coherency_tests.cpp  hw_coherency_tests.h  litmus_framework.cpp  litmus_framework.h  main.cpp  sw_coherency_tests.cpp  sw_coherency_tests.h
src/gapbs-cxl-pgas/: CMakeLists.txt  README.md
src/gapbs-cxl-pgas/include/: pgas_algorithms.h  pgas_graph.h
src/gapbs-cxl-pgas/src/: main.cpp
src/libpgas/: CMakeLists.txt
src/libpgas/cmake/: pgas.pc.in  pgasConfig.cmake.in
src/libpgas/config/: gromacs.conf  llama.conf  mcf.conf  node0.conf  node1.conf
src/libpgas/examples/: CMakeLists.txt  array_workload.c  simple_workload.c
src/libpgas/include/: cxl_memory.h  pgas.h  pgas_workload.h
src/libpgas/src/: cxl_memory.c  pgas.c  pgas_workload.c
src/libpgas/tests/: CMakeLists.txt  cxl_workload_benchmark.c  gromacs_integration_test.c  llama_integration_test.c  mcf_integration_test.c  pgas_selfloop_test.c  profile_benchmark.c  simple_profile_test.c  tuning_test.c  vsag_integration_test.c  vsag_pgas_benchmark.c  workload_benchmark.c
src/memcached-cxl-pgas/: CMakeLists.txt  README.md
src/memcached-cxl-pgas/bpf/: memcached_uprobe.bpf.c
src/memcached-cxl-pgas/config/: nodes.conf.example
src/memcached-cxl-pgas/include/: memcached_interceptor.h  pgas.h
src/memcached-cxl-pgas/scripts/: quick_test.sh  run_two_node_test.sh
src/memcached-cxl-pgas/src/: cxl_memory.c  main.c  memcached_interceptor.c  pgas.c
src/memcached-cxl-pgas/tests/: pgas_two_node_test.c
tests/: cxl_selfloop_test.cpp  pgas_selfloop_test.c
workloads/ann-benchmarks/ann_benchmarks/: main.py
workloads/ann-benchmarks/ann_benchmarks/algorithms/vsag/: module.py
workloads/gromacs/: test_mpi_cxl
workloads/osu/: Makefile.in  config.status  configure  libtool
workloads/osu/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
workloads/osu/mpi/: Makefile.in
workloads/osu/mpi/collective/: Makefile.in  osu_allgather  osu_allgatherv  osu_allreduce  osu_alltoall  osu_alltoallv  osu_barrier  osu_bcast  osu_gather  osu_gatherv  osu_iallgather  osu_iallgatherv  osu_ialltoall  osu_ialltoallv  osu_ialltoallw  osu_ibarrier  osu_ibcast  osu_igather  osu_igatherv  osu_iscatter  osu_iscatterv  osu_reduce  osu_reduce_scatter  osu_scatter  osu_scatterv
workloads/osu/mpi/collective/.deps/: osu_allgather.Po  osu_allgatherv.Po  osu_allreduce.Po  osu_alltoall.Po  osu_alltoallv.Po  osu_barrier.Po  osu_bcast.Po  osu_coll.Po  osu_gather.Po  osu_gatherv.Po  osu_iallgather.Po  osu_iallgatherv.Po  osu_ialltoall.Po  osu_ialltoallv.Po  osu_ialltoallw.Po  osu_ibarrier.Po  osu_ibcast.Po  osu_igather.Po  osu_igatherv.Po  osu_iscatter.Po  osu_iscatterv.Po  osu_reduce.Po  osu_reduce_scatter.Po  osu_scatter.Po  osu_scatterv.Po
workloads/osu/mpi/one-sided/: Makefile.in  osu_acc_latency  osu_cas_latency  osu_fop_latency  osu_get_acc_latency  osu_get_bw  osu_get_latency  osu_put_bibw  osu_put_bw  osu_put_latency
workloads/osu/mpi/one-sided/.deps/: osu_1sc.Po  osu_acc_latency.Po  osu_cas_latency.Po  osu_fop_latency.Po  osu_get_acc_latency.Po  osu_get_bw.Po  osu_get_latency.Po  osu_put_bibw.Po  osu_put_bw.Po  osu_put_latency.Po
workloads/osu/mpi/pt2pt/: Makefile.in  osu_bibw  osu_bw  osu_latency  osu_latency_mt  osu_mbw_mr  osu_multi_lat
workloads/osu/mpi/pt2pt/.deps/: osu_bibw.Po  osu_bw.Po  osu_latency.Po  osu_latency_mt.Po  osu_mbw_mr.Po  osu_multi_lat.Po  osu_pt2pt.Po
workloads/osu/mpi/startup/: Makefile.in  osu_hello  osu_init
workloads/osu/mpi/startup/.deps/: osu_hello.Po  osu_init.Po
workloads/osu/openshmem/: Makefile.in
workloads/osu/upc/: Makefile.in
workloads/osu/upcxx/: Makefile.in
workloads/tigon/: CHANGES_SUMMARY.md  DAX_MMAP_SETUP.md  FIXED_ISSUES.md  QUICK_DAX_GUIDE.md  REMOTE_SETUP.md
workloads/tigon/emulation/vms/: iptables.rules.old
workloads/tigon/log/ycsb/: ycsb-TwoPL-rmw-8-3-100-0.7-1-0-NoMoveOut-OnDemand-0-0-NoOP-None-GROUP_WAL-10000-0.txt
workloads/tigon/results/tpcc/: tpcc-Sundial-8-3-1-0-NoMoveOut-OnDemand-0-0-NoOP-None-GROUP_WAL-10000-0.txt  tpcc-TwoPL-8-3-1-0-NoMoveOut-OnDemand-0-0-NoOP-None-GROUP_WAL-10000-0.txt  tpcc.csv
workloads/vsag/: CMakeLists.txt
workloads/vsag/python/: setup.py
workloads/vsag/src/index/: pyramid_zparameters.h  pyramid_zparameters_test.cpp
workloads/vsag/src/quantization/scalar_quantization/: sq_parameter_headers.h
